--- a/css/menu.css
+++ b/css/menu.css
@@ -20,9 +20,25 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'shrikhandregular';
+    src: url('fonts/shrikhand-regular-webfont.eot');
+    src: url('fonts/shrikhand-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/shrikhand-regular-webfont.woff') format('woff'),
+         url('fonts/shrikhand-regular-webfont.ttf') format('truetype'),
+         url('fonts/shrikhand-regular-webfont.svg#shrikhandregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 *
 {
     box-sizing: border-box;
+}
+
+body
+{
+    margin: 0;
 }
 
 header
@@ -36,4 +52,39 @@ header
     display: flex;
     justify-content: center;
     height: 28px;
+}
+
+
+footer
+{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    background-color: #353434;
+    width: 100%;
+    padding-bottom: 20px;
+}
+
+footer h1
+{
+    font-family: 'shrikhandregular', sans-serif;
+    color: white;
+    font-size: 1.1rem;
+    padding-left: 15px;
+    margin-top: 20px;
+}
+
+footer  a
+{
+    color: white;
+    text-decoration: none;   
+    font-family: 'robotomedium', sans-serif;
+    font-size: .9rem;
+    padding-left: 15px;
+    margin-bottom: 10px;
+}
+
+footer i
+{
+    padding-right: 10px;
 }
