--- a/css/index.css
+++ b/css/index.css
@@ -132,6 +132,7 @@ header
 {
     margin-top: 50px;
     font-family: 'robotomedium', sans-serif;
+    margin-bottom: 70px;
 }
 
 .operation h2
@@ -187,6 +188,89 @@ header
     color: black;
 }
 
+#restaurants
+{
+    background-color: #F6F6F6;
+    padding-top: 30px;
+    margin-bottom: 60px;
+}
+
+#restaurants h2
+{
+    font-family: 'robotomedium', sans-serif;
+    font-size: 1.4rem;
+    margin-left: 20px;
+}
+
+.restaurant_card
+{
+    margin-left: 30px;
+    margin-right: 30px;
+    box-shadow: 1px 2px 10px #E1E1E1;
+    position: relative;
+    border-radius: 20px 20px 20px 20px;
+}
+
+.restaurant_card a
+{
+    text-decoration: none;
+}
+
+.restaurant_card img
+{
+    height: 180px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 20px 20px 0px 0px;
+    position: relative;
+}
+
+.card_info
+{
+    background-color: #99E2D0;
+    padding: 7px;
+    font-family: 'robotomedium', sans-serif;
+    font-size: .9rem;
+    color: #3D917D;
+    position: absolute;
+    margin-top: 10px;
+    margin-left: -90px;
+}
+
+.card_footer
+{
+    background-color: white;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.card_footer h3
+{
+    margin: 0;
+    padding-top: 10px;
+    font-family: 'robotomedium', sans-serif;
+    color: black;
+    font-size: 1.1rem;
+    margin-left: 10px;
+}
+
+.card_footer p
+{
+    font-family: 'robotolight', sans-serif;
+    color: black;
+    margin-left: 10px;
+    margin-top: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.card_footer i
+{
+    color: black;
+    font-size: 1.4rem;
+    margin-right: 15px;
+    padding-bottom: 20px;
+    margin-top: -10px;
+}
 
 footer
 {
