--- a/css/menu.css
+++ b/css/menu.css
@@ -47,13 +47,55 @@ header
     margin-bottom: 20px;
 }
 
-.header_logo
+header i
 {
-    display: flex;
-    justify-content: center;
-    height: 28px;
+    margin-left: 20px;
+    color: #5E5D5D;
+    font-size: 1.2rem;
 }
 
+.menu_logo
+{
+    height: 28px;
+    display: flex;
+    justify-content: center;
+    margin-top: -21px;
+}
+
+main
+{
+    background-color: #F6F6F6;
+}
+
+.illustration img
+{
+    height: 250px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.illustration h2
+{
+    font-family: 'shrikhandregular', sans-serif;
+    font-weight: 90;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 20px;
+    margin-right: 30px;
+}
+
+.illustration i
+{
+    margin-top: 5px;
+}
+
+.menu h2
+{
+    font-family: 'robotolight', sans-serif;
+    font-size: 1rem;
+    margin-left: 15px;
+}
 
 footer
 {
