--- a/css/index.css
+++ b/css/index.css
@@ -125,7 +125,9 @@ header
     color: white;
     font-size: 1rem;
     border: none;
-    box-shadow: 1px 2px 10px #E1E1E1;
+    cursor: pointer;
+    background: linear-gradient(180deg, #FF79DA, #9356DC);
+    box-shadow: 1px 3px 10px grey;
 }
 
 .operation
