--- a/css/menu.css
+++ b/css/menu.css
@@ -90,18 +90,89 @@ main
     margin-top: 5px;
 }
 
+.menu 
+{
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
 .menu h2
 {
     font-family: 'robotolight', sans-serif;
     font-size: 1rem;
-    margin-left: 15px;
+}
+
+#border
+{
+    border-top: 3px solid #99E2D0;
+    width: 40px;
+    margin-top: -10px;
+}
+
+.menu_container_meal
+{
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 1px 2px 10px #E1E1E1;
+    height: 60px;
+}
+
+.menu_container_meal h3
+{
+    font-family: 'robotomedium', sans-serif;
+    font-size: 1.1rem;
+    margin-left: 10px;
+    padding-top: 5px;
+}
+
+.menu_container_meal p
+{
+    font-family: 'robotolight', sans-serif;
+    margin-left: 10px;
+    margin-top: -15px;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.menu_container_meal span
+{
+    font-family: 'robotomedium', sans-serif;
+    margin-right: 10px;
+}
+
+.menu_container_meal i
+{
+    display: none;
+}
+
+.order 
+{
+    display: flex;
+    justify-content: center;
+}
+
+.order_button
+{
+    border-radius: 30px 30px 30px 30px;
+    justify-content: center;
+    width: 180px;
+    height: 50px;
+    align-items: center;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    color: white;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    background: linear-gradient(180deg, #FF79DA, #9356DC);
+    box-shadow: 1px 3px 10px grey;
 }
 
 footer
 {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
     background-color: #353434;
     width: 100%;
     padding-bottom: 20px;
