--- a/css/menu.css
+++ b/css/menu.css
@@ -88,6 +88,12 @@ main
 .illustration i
 {
     margin-top: 5px;
+    cursor: pointer;
+}
+
+.icone_fav-solid
+{
+    display: none;
 }
 
 .menu 
@@ -115,6 +121,7 @@ main
     border-radius: 20px;
     box-shadow: 1px 2px 10px #E1E1E1;
     height: 60px;
+    cursor: pointer;
 }
 
 .menu_container_meal h3
@@ -123,6 +130,7 @@ main
     font-size: 1.1rem;
     margin-left: 10px;
     padding-top: 5px;
+    text-overflow: ellipsis;
 }
 
 .menu_container_meal p
@@ -132,7 +140,7 @@ main
     margin-top: -15px;
     display: flex;
     justify-content: space-between;
-    
+    text-overflow: ellipsis;
 }
 
 .menu_container_meal span
