--- a/css/index.css
+++ b/css/index.css
@@ -41,15 +41,26 @@ body
     margin: 0;
 }
 
-/*.loader
+.loader
 {
-    height: 500px;
-    line-height: 500px;
+    display: flex;  
+    justify-content: center;
+    align-items: center;  
+    width: 100vw;
+    height: 100vh;
     background-color: #9356DC;
     text-align: center;
-    font-size: 90px;
     color: #FF79DA;
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    animation: fadeout 1s 2s forwards;
+}
+
+.loader i.fas.fa-utensils 
+{
+    position: absolute;
+    font-size: 50px;
 }
 
 .loader_anim
@@ -79,9 +90,14 @@ body
 
 @keyframes spin
 {
-    O% {transform: rotate(0deg);}  
+    0% {transform: rotate(0deg);}  
     100% {transform: rotate(360deg);}  
-}*/
+}
+
+@keyframes fadeout {
+    0% {opacity: 100%;}  
+    100% {opacity: 0%; visibility:hidden;} 
+}    
 
 header
 {
