--- a/css/menu.css
+++ b/css/menu.css
@@ -69,9 +69,10 @@ main
 
 .illustration img
 {
-    height: 250px;
+    height: 300px;
     width: 100%;
     object-fit: cover;
+    position: relative;
 }
 
 .illustration h2
@@ -96,6 +97,15 @@ main
     display: none;
 }
 
+.border_menu
+{
+    position: absolute;
+    margin-top: -80px;
+    background-color: #F6F6F6;
+    width: 100%;
+    border-radius: 30px 30px 0px 0px;
+}
+
 .menu 
 {
     margin-left: 15px;
@@ -115,6 +125,23 @@ main
     margin-top: -10px;
 }
 
+.menu_container
+{
+    animation: listfade .7s linear;
+}
+
+@keyframes listfade 
+{
+    0% {
+        opacity:0;
+        transform:translateY(15%);
+    }
+    100%{
+        opacity:1;
+        transform:translateY(0%);
+    }
+}
+
 .menu_container_meal
 {
     background-color: white;
@@ -122,6 +149,7 @@ main
     box-shadow: 1px 2px 10px #E1E1E1;
     height: 60px;
     cursor: pointer;
+    text-overflow: ellipsis;
 }
 
 .menu_container_meal h3
@@ -130,7 +158,6 @@ main
     font-size: 1.1rem;
     margin-left: 10px;
     padding-top: 5px;
-    text-overflow: ellipsis;
 }
 
 .menu_container_meal p
@@ -138,20 +165,35 @@ main
     font-family: 'robotolight', sans-serif;
     margin-left: 10px;
     margin-top: -15px;
-    display: flex;
-    justify-content: space-between;
-    text-overflow: ellipsis;
 }
 
 .menu_container_meal span
 {
     font-family: 'robotomedium', sans-serif;
     margin-right: 10px;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: -20px;
 }
 
 .menu_container_meal i
 {
     display: none;
+    color: black;
+    font-size: 1.5rem;
+    margin-top: -31px;
+    margin-left: 0;
+    margin-right: -50px;
+    padding-top: 20px;
+    padding-left: 25px;
+    border-radius: 0px 20px 20px 0px;
+}
+
+.menu_container_meal:hover i
+{
+    display: block;
+    animation: checked .5s ease-in-out forwards;
+    animation: icone-rotate .5s forwards;
 }
 
 .order 
@@ -175,6 +217,12 @@ main
     cursor: pointer;
     background: linear-gradient(180deg, #FF79DA, #9356DC);
     box-shadow: 1px 3px 10px grey;
+    transition: .3s ease-out;
+}
+
+.order_button:hover
+{
+    transform: scale(1.05);
 }
 
 footer
@@ -208,4 +256,42 @@ footer  a
 footer i
 {
     padding-right: 10px;
+}
+
+@media only screen and (min-width:650px) {
+    
+    .illustration h2 
+    {
+        justify-content: center;
+    }   
+
+    .illustration i 
+    {   
+        margin-left: 10px;
+    }
+
+}
+
+@media only screen and (min-width: 860px) {
+
+    main, .border_menu
+    {
+        width: 860px;
+        flex-direction: column;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    footer 
+    {
+        display: inline-block;
+        flex-direction: row;
+        padding-bottom: 15px;
+        text-align: center;
+    }
+
+    footer a
+    {
+        margin-top: 20px;
+    }
 }
