--- a/css/index.css
+++ b/css/index.css
@@ -360,6 +360,7 @@ i.icone_fav_solid
 {
     background: linear-gradient(180deg, #FF79DA, #9356DC);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     position: relative;
     left: -22.5px;
@@ -459,8 +460,6 @@ footer i
         margin-right: auto;
         padding-bottom: 30px;
     }
-
-    
 
 }
 
