--- a/css/menu.css
+++ b/css/menu.css
@@ -81,20 +81,50 @@ main
     font-weight: 90;
     font-size: 1.5rem;
     display: flex;
-    justify-content: space-between;
     margin-left: 20px;
     margin-right: 30px;
 }
 
 .illustration i
 {
-    margin-top: 5px;
     cursor: pointer;
+    display: flex;
+    color: black;
+    font-size: 1.4rem;
 }
 
-.icone_fav-solid
+.border_icone
 {
-    display: none;
+    margin-top: 25px;
+
+}
+
+i.icone_fav
+{
+    z-index: -99;
+    transition: color 150ms 50ms ease-in-out;
+}
+
+i.icone_fav_solid
+{
+    background: linear-gradient(180deg, #FF79DA, #9356DC);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    position: relative;
+    left: -22.5px;
+    transform: scale(0);
+    transition: transform 150ms 50ms ease-in-out;
+}
+
+i.icone_fav:hover
+{
+    color: transparent;
+}
+
+i.icone_fav:hover i.icone_fav_solid
+{
+    transform: scale(1);
 }
 
 .border_menu
@@ -104,6 +134,8 @@ main
     background-color: #F6F6F6;
     width: 100%;
     border-radius: 30px 30px 0px 0px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .menu 
@@ -118,7 +150,7 @@ main
     font-size: 1rem;
 }
 
-#border
+.border
 {
     border-top: 3px solid #99E2D0;
     width: 40px;
@@ -134,7 +166,7 @@ main
 {
     0% {
         opacity:0;
-        transform:translateY(15%);
+        transform:translateY(-15%);
     }
     100%{
         opacity:1;
@@ -142,58 +174,94 @@ main
     }
 }
 
+.menu_container p
+{
+    font-family: 'robotomedium', sans-serif;
+    margin-top: 30px;
+    margin-right: 10px;
+}
+
 .menu_container_meal
 {
+    display: flex;
+    justify-content: space-between;
     background-color: white;
     border-radius: 20px;
     box-shadow: 1px 2px 10px #E1E1E1;
     height: 60px;
+    margin-top: 20px;
     cursor: pointer;
-    text-overflow: ellipsis;
 }
 
-.menu_container_meal h3
+.menu_container_meal_text
+{
+    display: flex;
+    flex-direction: column;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    flex: 1;
+}
+
+.menu_container_meal_text strong
 {
     font-family: 'robotomedium', sans-serif;
-    font-size: 1.1rem;
+    margin-top: 7px;
     margin-left: 10px;
-    padding-top: 5px;
 }
 
-.menu_container_meal p
+.menu_container_meal_text span
 {
     font-family: 'robotolight', sans-serif;
     margin-left: 10px;
-    margin-top: -15px;
 }
 
-.menu_container_meal span
+.menu_container_meal_check
 {
-    font-family: 'robotomedium', sans-serif;
-    margin-right: 10px;
     display: flex;
-    justify-content: flex-end;
-    margin-top: -20px;
-}
-
-.menu_container_meal i
-{
-    display: none;
-    color: black;
-    font-size: 1.5rem;
-    margin-top: -31px;
-    margin-left: 0;
-    margin-right: -50px;
-    padding-top: 20px;
-    padding-left: 25px;
+    justify-content: center;
+    align-items: center;
+    background-color: #99E2D0;
+    overflow: hidden;
+    box-sizing: border-box;
+    width: 0px;
     border-radius: 0px 20px 20px 0px;
+    transition: width 1s ease;
 }
 
-.menu_container_meal:hover i
+.menu_container_meal:hover .menu_container_meal_check
+{
+    width: 60px;
+}
+
+.menu_container_meal span, strong
+{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.menu_container_meal:hover .fa-check-circle
 {
     display: block;
-    animation: checked .5s ease-in-out forwards;
-    animation: icone-rotate .5s forwards;
+    animation: checkboxrotate 500ms 200ms ease-out;
+}
+
+.fa-check-circle
+{
+    color: white;
+    font-size: 1.5rem;
+    display: none;
+}
+
+@keyframes checkboxrotate 
+{
+    0% {
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(1turn);
+    }
 }
 
 .order 
@@ -260,15 +328,10 @@ footer i
 
 @media only screen and (min-width:650px) {
     
-    .illustration h2 
+    .border_menu
     {
         justify-content: center;
     }   
-
-    .illustration i 
-    {   
-        margin-left: 10px;
-    }
 
 }
 
@@ -277,7 +340,6 @@ footer i
     main, .border_menu
     {
         width: 860px;
-        flex-direction: column;
         margin-right: auto;
         margin-left: auto;
     }
